[package]
name = "reqwest-scoped-ipv6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures-util = "0.3.25"
hyper = { version = "0.14", features = [ "client" ] }
reqwest = "0.11.14"
tokio = { version = "1.24.2", features = [ "rt-multi-thread", "macros", "net" ] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"